--- a/frontend/public/styles/_pages.css
+++ b/frontend/public/styles/_pages.css
@@ -4,6 +4,7 @@
 @import './pages/inventory.css';
 @import './pages/planning.css';
 @import './pages/booking.css';
+@import './pages/collection.css';
 
 
 
