--- a/frontend/public/styles/_pages.css
+++ b/frontend/public/styles/_pages.css
@@ -5,8 +5,4 @@
 @import './pages/planning.css';
 @import './pages/booking.css';
 @import './pages/collection.css';
-
-
-
-
-
+@import './pages/home.css';
