--- a/frontend/public/styles/_modals.css
+++ b/frontend/public/styles/_modals.css
@@ -1,5 +1,6 @@
 /* --- Import des CSS spécifiques aux dialogues modaux --- */
 @import './pages/booking_modal.css';
+@import './pages/org_modal.css';
 
 
 
